--- a/access.html
+++ b/access.html
@@ -19,7 +19,7 @@
         <div id="header_top_inr">
           <h1><a href="http://www.yokohamabio.co.jp/"><img src="images/logo.png" alt="株式会社横浜バイオリサーチアンドサプライ">株式会社横浜バイオリサーチアンドサプライ</a></h1>
           <ul class="iconSNS">
-            <li><a href="https://twitter.com/yokohamabio" target="_blank"><img src="images/icon_tw.png" alt="Twitter"></a></li>
+            <li><a href="https://twitter.com/yokohamabio" target="_blank"><img src="images/icon_x.png" alt="Twitter"></a></li>
             <li><a href="https://www.facebook.com/yokohamabio/" target="_blank"><img src="images/icon_fb.png" alt="Facebook"></a></li>
           </ul>
         </div>
@@ -40,27 +40,7 @@
       <section id="sct_access" class="sct_h2">
         <h2 class="wrapper_breakingOut_mp">アクセス</h2>
         <section class="sct_h3">
-          <h3 class="sct_access_h3 notH3">本社（鶴見事業所）</h3>
-          <p class="sct_h3_p1">〒230-0045　横浜市鶴見区末広町1-6　 横浜バイオ産業センター</p>
-          <div class="sct_h3_map">
-            <p><img src="images/access_map_1.png" alt="外観　本社（鶴見事業所）"></p> <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3248.633529992794!2d139.68397486525362!3d35.488609980239595!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60185df4ad28ea1f%3A0xee724ca30a22c62c!2z44CSMjMwLTAwNDUg56We5aWI5bed55yM5qiq5rWc5biC6ba06KaL5Yy65pyr5bqD55S677yR5LiB55uuIOaoqua1nOODkOOCpOOCqueUo-alreOCu-ODs-OCv-ODvA!5e0!3m2!1sja!2sjp!4v1527002020029" width="560" height="285" frameborder="0" style="border:0" allowfullscreen></iframe> </div>
-          <table>
-            <tr>
-              <th>バス</th>
-              <td>JR京浜東北線「鶴見駅」東口又は京急線「京急鶴見駅」からバス12分。<br> 鶴見駅東口バスターミナル8番乗り場より、<br> 臨港バス (鶴08系統) 「ふれーゆ」行き「理研・市大大学院前」下車。</td>
-            </tr>
-            <tr>
-              <th>電車</th>
-              <td>JR鶴見線「鶴見小野駅」より徒歩15分。</td>
-            </tr>
-            <tr>
-              <td colspan="2">ふれーゆ行バス停からふれーゆ方面に70ｍ進んだ左手の黒い門が入口になります。<br> 門を入ってすぐのエレベーターで2階へあがって頂き、左方向にあります建物が「横浜バイオ産業センター」になります。<br> 2つ目の自動ドアの右側にある電話にて内線でお呼び出し下さい。</td>
-            </tr>
-          </table>
-        </section>
-        <section class="sct_h3">
-          <h3 class="sct_access_h3 notH3">福浦事業所</h3>
-          <p class="sct_h3_p1">〒236-0004　横浜市金沢区福浦2-12-1　癸巳化成H＆Bセンター</p>
+          <p class="sct_h3_p1">〒236-0004　横浜市金沢区福浦2-12-1　癸巳化成H＆Bセンター　7F</p>
           <div class="sct_h3_map">
             <p><img src="images/access_map_2.png" alt="外観　福浦事業所"></p> <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3254.311461770467!2d139.6503289153362!3d35.34791595578691!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6018422af0ae429d%3A0xdf0ae80e3d388dff!2z44CSMjM2LTAwMDQg56We5aWI5bed55yM5qiq5rWc5biC6YeR5rKi5Yy656aP5rWm77yS5LiB55uu77yR77yS4oiS77yRIOeZuOW3s-WMluaIkO-8qO-8hu-8ouOCu-ODs-OCv-ODvA!5e0!3m2!1sja!2sjp!4v1527003992568" width="560" height="285" frameborder="0" style="border:0" allowfullscreen></iframe> </div>
           <table>
@@ -90,27 +70,20 @@
         </section>
         <section class="sct_otoiawase_h3">
           <h3>お電話によるお問い合わせ</h3>
-          <p class="sct_otoiawase_h3_num">TEL: 045-511-1028</p>
+          <p class="sct_otoiawase_h3_num">TEL: 045-306-9595</p>
           <p>受付時間：10:00-17:00 (土・日・祝日・夏季・年末年始の休業日を除く)</p>
         </section>
-        <section class="sct_otoiawase_h3">
-          <h3>FAXによるお問い合わせ</h3>
-          <p class="sct_otoiawase_h3_num">FAX: 045-306-9594</p>
-          <p>受付時間：10:00-17:00 (土・日・祝日・夏季・年末年始の休業日を除く)</p>
-        </section>
-        <p class="sct_otoiawase_h2_p2 wrapper_breakingOut_mp"> ※FAX、メールによるお問い合わせのお客様は<br> 所属・氏名、返信先電話/FAX番号又はメールアドレスをご記入下さい。<br> 3営業日以内に返信が届かない場合はあらためてお電話でお問い合わせ頂けると幸いです。 </p>
+        <p class="sct_otoiawase_h2_p2 wrapper_breakingOut_mp"> ※メールによるお問い合わせのお客様は<br> 所属・氏名、返信先電話又はメールアドレスをご記入下さい。<br> 3営業日以内に返信が届かない場合はあらためてお電話でお問い合わせ頂けると幸いです。 </p>
       </section>
     </div>
     <footer id="footer" class="wrapper_breakingOut_m">
       <div id="footer_inr">
         <div id="footer_top">
           <h2><a href=""><img src="images/logo.png" alt="株式会社横浜バイオリサーチアンドサプライ">株式会社横浜バイオリサーチアンドサプライ</a></h2> <address>
-						〒230-0045<br>
-						神奈川県横浜市鶴見区末広町１-６<br>
-						横浜バイオ産業センター<br>
-						234号室<br>
-						TEL：045-511-1028<br>
-						FAX：045-306-9594
+						〒236-0004<br>
+						神奈川県横浜市金沢区福浦2-12-1<br>
+            癸巳化成H＆Bセンター 7F<br>
+						TEL：045-306-9594<br>
 					</address>
           <div id="footer_nav">
             <ul>
