--- a/service.html
+++ b/service.html
@@ -19,7 +19,7 @@
         <div id="header_top_inr">
           <h1><a href="http://www.yokohamabio.co.jp/"><img src="images/logo.png" alt="株式会社横浜バイオリサーチアンドサプライ">株式会社横浜バイオリサーチアンドサプライ</a></h1>
           <ul class="iconSNS">
-            <li><a href="https://twitter.com/yokohamabio" target="_blank"><img src="images/icon_tw.png" alt="Twitter"></a></li>
+            <li><a href="https://twitter.com/yokohamabio" target="_blank"><img src="images/icon_x.png" alt="Twitter"></a></li>
             <li><a href="https://www.facebook.com/yokohamabio/" target="_blank"><img src="images/icon_fb.png" alt="Facebook"></a></li>
           </ul>
         </div>
@@ -125,12 +125,10 @@
       <div id="footer_inr">
         <div id="footer_top">
           <h2><a href=""><img src="images/logo.png" alt="株式会社横浜バイオリサーチアンドサプライ">株式会社横浜バイオリサーチアンドサプライ</a></h2> <address>
-						〒230-0045<br>
-						神奈川県横浜市鶴見区末広町１-６<br>
-						横浜バイオ産業センター<br>
-						234号室<br>
-						TEL：045-511-1028<br>
-						FAX：045-306-9594
+						〒236-0004<br>
+						神奈川県横浜市金沢区福浦2-12-1<br>
+            癸巳化成H＆Bセンター 7F<br>
+						TEL：045-306-9594<br>
 					</address>
           <div id="footer_nav">
             <ul>
