--- a/company.html
+++ b/company.html
@@ -19,7 +19,7 @@
         <div id="header_top_inr">
           <h1><a href="http://www.yokohamabio.co.jp/"><img src="images/logo.png" alt="株式会社横浜バイオリサーチアンドサプライ">株式会社横浜バイオリサーチアンドサプライ</a></h1>
           <ul class="iconSNS">
-            <li><a href="https://twitter.com/yokohamabio" target="_blank"><img src="images/icon_tw.png" alt="Twitter"></a></li>
+            <li><a href="https://twitter.com/yokohamabio" target="_blank"><img src="images/icon_x.png" alt="Twitter"></a></li>
             <li><a href="https://www.facebook.com/yokohamabio/" target="_blank"><img src="images/icon_fb.png" alt="Facebook"></a></li>
           </ul>
         </div>
@@ -55,8 +55,7 @@
             </tr>
             <tr>
               <td>所在地</td>
-              <td>本社(鶴見事業所)<br> 〒230-0045　横浜市鶴見区末広町1-6 横浜バイオ産業センター<br> Tell：045-511-1028　　Fax：045-306-9594<br>
-                <hr> 福浦事業所<br> 〒236-0004　横浜市金沢区福浦2-12-1　癸巳化成H＆Bセンター</td>
+              <td>福浦事業所<br> 〒236-0004　横浜市金沢区福浦2-12-1　癸巳化成H＆Bセンター 7F</td>
             </tr>
             <tr>
               <td>資本金</td>
@@ -64,7 +63,7 @@
             </tr>
             <tr>
               <td>従業員数</td>
-              <td>11名</td>
+              <td>9名</td>
             </tr>
             <tr>
               <td>事業内容</td>
@@ -120,6 +119,10 @@
               <td>2016年 4月</td>
               <td>横浜バイオ医薬品研究開発センター(YBIRD)の業務委受託契約(第2期)締結</td>
             </tr>
+            <tr>
+              <td>2024年 4月</td>
+              <td>本社・事務所・ラボ移転　福浦事務所に統合<br> 所在地：癸巳化成H＆Bセンター(金沢区福浦)</td>
+            </tr>
           </table>
         </section>
         <section class="sct_h3">
@@ -149,12 +152,10 @@
       <div id="footer_inr">
         <div id="footer_top">
           <h2><a href=""><img src="images/logo.png" alt="株式会社横浜バイオリサーチアンドサプライ">株式会社横浜バイオリサーチアンドサプライ</a></h2> <address>
-						〒230-0045<br>
-						神奈川県横浜市鶴見区末広町１-６<br>
-						横浜バイオ産業センター<br>
-						234号室<br>
-						TEL：045-511-1028<br>
-						FAX：045-306-9594
+						〒236-0004<br>
+						神奈川県横浜市金沢区福浦2-12-1<br>
+            癸巳化成H＆Bセンター 7F<br>
+						TEL：045-306-9594<br>
 					</address>
           <div id="footer_nav">
             <ul>
