--- a/company.html
+++ b/company.html
@@ -55,7 +55,7 @@
             </tr>
             <tr>
               <td>所在地</td>
-              <td>福浦事業所<br> 〒236-0004　横浜市金沢区福浦2-12-1　癸巳化成H＆Bセンター 7F</td>
+              <td>〒236-0004　横浜市金沢区福浦2-12-1　癸巳化成H＆Bセンター 7F</td>
             </tr>
             <tr>
               <td>資本金</td>
@@ -121,7 +121,7 @@
             </tr>
             <tr>
               <td>2024年 4月</td>
-              <td>本社・事務所・ラボ移転　福浦事務所に統合<br> 所在地：癸巳化成H＆Bセンター(金沢区福浦)</td>
+              <td>本社・事務所・ラボ移転<br> 所在地：癸巳化成H＆Bセンター(金沢区福浦)</td>
             </tr>
           </table>
         </section>
@@ -170,7 +170,7 @@
           </div>
         </div>
         <ul class="iconSNS">
-          <li><a href="https://twitter.com/yokohamabio" target="_blank"><img src="images/icon_tw.png" alt="Twitter"></a></li>
+          <li><a href="https://twitter.com/yokohamabio" target="_blank"><img src="images/icon_x_fo.png" alt="Twitter"></a></li>
           <li><a href="https://www.facebook.com/yokohamabio/" target="_blank"><img src="images/icon_fb.png" alt="Facebook"></a></li>
         </ul>
         <p><small>Copyright © 2018 Yokohama Bio Research and Supply,Inc. All rights reserved.</small></p>
