--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           </div>
         </div>
         <ul class="iconSNS">
-          <li><a href="https://twitter.com/yokohamabio" target="_blank"><img src="images/icon_tw.png" alt="Twitter"></a></li>
+          <li><a href="https://twitter.com/yokohamabio" target="_blank"><img src="images/icon_x_fo.png" alt="Twitter"></a></li>
           <li><a href="https://www.facebook.com/yokohamabio/" target="_blank"><img src="images/icon_fb.png" alt="Facebook"></a></li>
         </ul>
         <p><small>Copyright © 2018 Yokohama Bio Research and Supply,Inc. All rights reserved.</small></p>
